--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,8 @@
     <title>Vite + React</title>
   </head>
   <body class="bg-gray-400">
-    <div id="modal"></div>
+    <div id="program-modal"></div>
+    <div id="cart-modal"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
